# simple-rest-rust

./: .env  Cargo.toml
migrations/00000000000000_diesel_initial_setup/: up.sql_old
migrations/2018-10-23-044222_users/: up.sql
src/: main.rs  schema.rs
src/models/: mod.rs
